some basic features, accepting gcode from prusa slicer, sends gcode to octopi

--- a/webapp/src/app/app.component.html
+++ b/webapp/src/app/app.component.html
@@ -1,19 +1,7 @@
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-</nav>
+<!-- <nav class="navbar navbar-light bg-dark text-light">
+  <a class="navbar-brand ms-4" href="#">
+    <img src="./../assets/maker-space.svg" style="height: 24px;">
+  </a>
+</nav> -->
 
-
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col">
-
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
+<router-outlet></router-outlet>
