--- a/webapp/src/app/components/files/files.component.html
+++ b/webapp/src/app/components/files/files.component.html
@@ -1,5 +1,29 @@
-<div class="row">
-    <div class="col-3" *ngFor="let file of files">
-        <app-file-card [data]="file"></app-file-card>
+<div class="container-fluid ms-3 me-3 mt-4">
+
+    <div class="row" *ngIf="files.length == 0">
+        <div class="col">
+            Keine Dateien zum drucken vorhanden.
+
+            Scanne den QR Code für die URL zum STL hochladen
+
+            <canvas #qrCodeCanvas></canvas>
+        </div>
     </div>
+
+    <div class="row">
+        <div class="col">
+            <div class="row">
+                <a [routerLink]="['/printers']" [queryParams]="{file: file.filename}" class="col-3"
+                    style="text-decoration: none; color: #000;" *ngFor="let file of files">
+                    <app-file-card [data]="file"></app-file-card>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="navigation">
+
+    <a [routerLink]="['/slideshow']" type="button" class="btn btn-outline-secondary">zurück</a>
+
 </div>
