--- a/webapp/src/app/components/slideshow/slideshow.component.html
+++ b/webapp/src/app/components/slideshow/slideshow.component.html
@@ -1,1 +1,23 @@
-<p>slideshow works!</p>
+<img src="./../../../assets/photo1662149983.jpeg" class="background-image">
+<img src="./../../../assets/background.svg" class="background">
+<div class="content">
+    <div class="row">
+        <div class="col">
+            <h1>3D Druck Kiosk</h1>
+            <p>
+                Hier kannst du deine 3D Drucke auf Prusa Druckern starten. Einfach auf das Drucker-Icon rechts
+                klicken und deine Datei auswählen.
+            </p>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-3">
+            <img src="./../../../assets/printer-icon.svg" style="width: 100px; height: 100px">
+            <p>
+                jetzt drucken
+            </p>
+
+        </div>
+    </div>
+</div>
+
+<a [routerLink]="['/files']" class="btn btn-link" style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></a>
