--- a/webapp/src/styles.scss
+++ b/webapp/src/styles.scss
@@ -4,6 +4,6 @@
 @import "./../node_modules/bootstrap/dist/css/bootstrap.css";
 
 
-// body {
-//     background-color: #000;
-// }
+body {
+    overflow: hidden;
+}
