--- a/webapp/src/app/components/slideshow/slideshow.component.scss
+++ b/webapp/src/app/components/slideshow/slideshow.component.scss
@@ -1,28 +1,51 @@
-.background {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
 
 .background-image {
     position: absolute;
     top: 0;
     right: 0;
-    min-height: 70vh;
-    width: 100vw;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
 .content {
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 65vw;
-    height: 25vh;
-    margin-top: 5vh;
+    width: 100vw;
+
+    // padding-top: 1rem;
+    // padding-bottom: 3rem;
+    // padding-left: 2rem;
+    // padding-right: 2rem;
+
+    background-color: rgba(255, 255, 255, 0.3);
+
+    .row {
+        margin-right: 0;
+        margin-left: 0;
+    
+        .col {
+
+            padding-left: 2rem;
+            padding-right: 2rem;
+
+            h1 {
+                text-transform: uppercase;
+            }
+
+            p {
+                text-align: justify;
+            }
+        }
+    
+        &.navigation {
+            width: 100vw;
+            height: 72px;
+            background-color: #000;
+            display: flex;
+            align-items: center;
+        }
+    }
+    
 }
 
-h1 {
-    text-transform: uppercase;
-}
