silence, printers are sleeping as a under construction message

--- a/webapp/src/app/components/slideshow/slideshow.component.html
+++ b/webapp/src/app/components/slideshow/slideshow.component.html
@@ -1,6 +1,15 @@
-<img src="./../../../assets/photo1662149983.jpeg" class="background-image">
+<div class="background-image"></div>
 
-<div class="content">
+<div style="position: absolute; top:0; left: 0; width: 100vw; height: 20vh; background-color: rgba(255,255,255,0.4); font-size: 5vh; display: flex; align-items: center; justify-content: center;">
+    Bitte leise - die Drucker schlafen noch!
+</div>
+
+
+<div style="position: absolute; bottom:0; left: 0; padding: 5vh; width: 100vw; height: 20vh; background-color: rgba(255,255,255,0.4); font-size: 5vh; display: flex; align-items: center; justify-content: center;">
+    Spaß beiseite - wir arbeiten noch an der Software. Aber bald kannst du deine Drucke bequem von hier aus starten
+</div>
+
+<!-- <div class="content">
     <div class="row">
         <div class="col">
             <h1>3D Druck Kiosk</h1>
@@ -19,8 +28,8 @@
             <button  type="button" class="btn btn-outline-secondary">jetzt drucken</button>
         </div>
     </div>
-</div>
+</div> -->
 
 
 
-<a [routerLink]="['/files']" class="btn btn-link" style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></a>
+<!-- <a [routerLink]="['/files']" class="btn btn-link" style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></a> -->
