--- a/webapp/src/app/components/slideshow/slideshow.component.scss
+++ b/webapp/src/app/components/slideshow/slideshow.component.scss
@@ -5,6 +5,11 @@
     right: 0;
     min-height: 100vh;
     min-width: 100vw;
+    
+    background-image: url(./../../../assets/printer-sleeping.jpeg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .content {
@@ -12,12 +17,6 @@
     bottom: 0;
     right: 0;
     width: 100vw;
-
-    // padding-top: 1rem;
-    // padding-bottom: 3rem;
-    // padding-left: 2rem;
-    // padding-right: 2rem;
-
     background-color: rgba(255, 255, 255, 0.3);
 
     .row {
@@ -39,6 +38,7 @@
         }
     
         &.navigation {
+            margin-bottom: 0;
             width: 100vw;
             height: 72px;
             background-color: #000;
@@ -46,6 +46,5 @@
             align-items: center;
         }
     }
-    
 }
 
