--- a/webapp/src/app/kiosk/components/printer-card/printer-card.component.html
+++ b/webapp/src/app/kiosk/components/printer-card/printer-card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-    <img *ngIf="printer.model == 'Prusa i3mk3s'" class="card-img-top no-image" src="./../../../assets/i3mk3s.jpg">
+    <img class="card-img-top " [src]="printer.image">
     <div class="card-body">
         <h5 class="card-title">{{ printer.name }}</h5>
         <p class="card-text d-flex justify-content-between">
