--- a/webapp/src/app/kiosk/components/printers/printers.component.html
+++ b/webapp/src/app/kiosk/components/printers/printers.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="navigation">
-    <a [routerLink]="['/files']"  type="button" class="btn btn-outline-secondary">zurück</a>
+    <a [routerLink]="['/kiosk/files']"  type="button" class="btn btn-outline-secondary">zurück</a>
 </div>
 
 
