--- a/webapp/src/app/kiosk/components/slideshow/slideshow.component.html
+++ b/webapp/src/app/kiosk/components/slideshow/slideshow.component.html
@@ -1,15 +1,15 @@
 <div class="background-image"></div>
 
-<div style="position: absolute; top:0; left: 0; width: 100vw; height: 20vh; background-color: rgba(255,255,255,0.4); font-size: 5vh; display: flex; align-items: center; justify-content: center;">
+<!-- <div style="position: absolute; top:0; left: 0; width: 100vw; height: 20vh; background-color: rgba(255,255,255,0.4); font-size: 5vh; display: flex; align-items: center; justify-content: center;">
     Bitte leise - die Drucker schlafen noch!
 </div>
 
 
 <div style="position: absolute; bottom:0; left: 0; padding: 5vh; width: 100vw; height: 20vh; background-color: rgba(255,255,255,0.4); font-size: 5vh; display: flex; align-items: center; justify-content: center;">
     Spaß beiseite - wir arbeiten noch an der Software. Aber bald kannst du deine Drucke bequem von hier aus starten
-</div>
+</div> -->
 
-<!-- <div class="content">
+<div class="content">
     <div class="row">
         <div class="col">
             <h1>3D Druck Kiosk</h1>
@@ -25,11 +25,10 @@
     </div>
     <div class="row navigation">
         <div class="col">
-            <button  type="button" class="btn btn-outline-secondary">jetzt drucken</button>
+                    Zum Druck starten hier berühren
         </div>
     </div>
-</div> -->
+</div>
 
 
-
-<!-- <a [routerLink]="['/files']" class="btn btn-link" style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></a> -->
+<a [routerLink]="['/kiosk/files']" class="btn btn-link" style="position: absolute; top: 0; left: 0; width: 100vw; height: 100vh;"></a>
